--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8" />
- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Квіз Кабінету водія</title>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <style>
-  
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
     body {
       font-family: 'Roboto', sans-serif;
@@ -32,7 +32,6 @@
       max-width: 100%;
       height: auto;
       margin: 0 auto 20px;
-      border-radius: 16px;
     }
 
     button {
@@ -64,15 +63,16 @@
     }
 
     .result {
-  display: none;
-  background: white;
-  color: #333;
-  padding: 30px;
-  border-radius: 12px;
-  text-align: center;
-  position: relative;
-  animation: fadeIn 0.5s ease-in-out; 
-}
+      display: none;
+      background: white;
+      color: #333;
+      padding: 30px;
+      border-radius: 12px;
+      text-align: center;
+      position: relative;
+      animation: fadeIn 0.5s ease-in-out;
+    }
+
     .result.winner {
       animation: pulse 2s infinite;
       border: 2px solid gold;
@@ -90,12 +90,11 @@
       animation: popIn 0.6s ease-out;
     }
 
-   .prize {
-  width: 180px;
-  margin: 30px auto 0;
-  animation: bounceGlow 1.5s ease-in-out infinite;
-  animation-delay: 0s; 
-}
+    .prize {
+      width: 180px;
+      margin: 30px auto 0;
+      animation: bounceGlow 1.5s ease-in-out infinite;
+    }
 
     @keyframes bounceGlow {
       0% { transform: translateY(0) scale(1); filter: brightness(1); }
@@ -112,15 +111,12 @@
     }
 
     #form-container {
-  background: white;
-  padding: 30px;
-  border-radius: 16px;
-  margin-bottom: 30px;
-  box-sizing: border-box;
-}
-input, button, form {
-  box-sizing: border-box;
-}
+      background: white;
+      padding: 30px;
+      border-radius: 16px;
+      margin-bottom: 30px;
+      box-sizing: border-box;
+    }
 
     label {
       display: block;
@@ -139,7 +135,8 @@ input, button, form {
   </style>
 </head>
 <body>
-  <h2>🚦 Перевір свої знання з ПДР</h2>
+  <img src="logoKV.png" alt="Логотип Кабінет Водія" style="max-width: 200px; margin: 0 auto 20px;" />
+  <h2>Перевір свої знання з ПДР</h2>
 
   <div id="form-container">
     <form id="contact-form" action="https://formspree.io/f/mblgebeb" method="POST" onsubmit="handleStart(event)">
@@ -149,27 +146,27 @@ input, button, form {
       <input type="email" id="email" name="email" required>
       <label for="phone">Телефон</label>
       <input type="text" id="phone" name="phone" required>
-      <button type="submit">▶️ Почати </button>
+      <button type="submit">▶️ Почати</button>
     </form>
   </div>
 
   <div id="quiz">
     <div class="question active" data-answer="A">
-      <img src="ua_3.22.svg" alt="Дорога" style="width: 100%; max-width: 500px;" />
+      <img src="ua_3.22.svg" alt="Дорога" />
       <p><strong>Питання 1:</strong> У якому із зазначених місць Ви можете перетнути суцільну лінію дорожньої розмітки та зупинитися?</p>
       <button onclick="checkAnswer('A')">Тільки Б</button>
       <button onclick="checkAnswer('B')">У будь-якому</button>
       <button onclick="checkAnswer('C')">У жодному</button>
     </div>
     <div class="question" data-answer="B">
-      <img src="ua_1.3.svg" alt="Дорожня ситуація" style="width: 100%; max-width: 360px;" />
+      <img src="ua_1.3.svg" alt="Дорожня ситуація" />
       <p><strong>Питання 2:</strong> Хто з водіїв, виконуючи зупинку, порушує Правила дорожнього руху?</p>
       <button onclick="checkAnswer('A')">Водій жовтого автомобіля</button>
       <button onclick="checkAnswer('B')">Водій червоного автомобіля</button>
       <button onclick="checkAnswer('C')">Обидва водії</button>
     </div>
     <div class="question" data-answer="B">
-      <img src="ua_1.40.svg" alt="Таблички" style="width: 100%; max-width: 500px;" />
+      <img src="ua_1.40.svg" alt="Таблички" />
       <p><strong>Питання 3:</strong> Встановлений з якою із зображених табличок дорожній знак діє в усі робочі дні?</p>
       <button onclick="checkAnswer('A')">З табличкою 1</button>
       <button onclick="checkAnswer('B')">З табличкою 2</button>
@@ -203,9 +200,7 @@ input, button, form {
 
     function checkAnswer(choice) {
       const answer = questions[current].dataset.answer;
-      if (choice === answer) {
-        correct++;
-      }
+      if (choice === answer) correct++;
       questions[current].classList.remove('active');
       current++;
       if (current < questions.length) {
@@ -226,14 +221,10 @@ input, button, form {
         `;
         confetti({ particleCount: 150, spread: 90, origin: { y: 0.6 } });
       } else {
-        const loseMessages = [
-          "GPS втратив сигнал знань"
-        ];
-        const random = loseMessages[Math.floor(Math.random() * loseMessages.length)];
         result.innerHTML = `
           <h3>❌ Ой... не цього разу!</h3>
           <img src="1_8.svg" class="fail-img" alt="Сумний котик" />
-          <p>${random}</p>
+          <p>GPS втратив сигнал знань</p>
           <button onclick="location.reload()">🔁 Спробувати ще раз</button>
         `;
       }
@@ -241,3 +232,4 @@ input, button, form {
   </script>
 </body>
 </html>
+
