--- a/index.html
+++ b/index.html
@@ -110,14 +110,26 @@
       100% { transform: scale(1); }
     }
 
-    #form-container {
-      background: white;
-      padding: 30px;
-      border-radius: 16px;
-      margin-bottom: 30px;
-      box-sizing: border-box;
-    }
+ #form-container {
+  background: white;
+  padding: 30px;
+  border-radius: 16px;
+  margin-bottom: 30px;
+  box-sizing: border-box;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+    
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+label, input {
+  width: 100%;
+}
     label {
       display: block;
       margin: 10px 0 5px;
