--- a/index.html
+++ b/index.html
@@ -148,10 +148,12 @@ label, input {
 </head>
 <body>
   <img src="logoKV.png" alt="Логотип Кабінет Водія" style="max-width: 200px; margin: 0 auto 20px;" />
+<div id="intro">
   <h2>Перевір свої знання з ПДР</h2>
+</div>
 
   <div id="form-container">
-    <form id="contact-form" action="https://formspree.io/f/mblgebeb" method="POST" onsubmit="handleStart(event)">
+
       <label for="name">Ім’я</label>
       <input type="text" id="name" name="name" required>
       <label for="email">Email</label>
