--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ label, input {
 </div>
 
   <div id="form-container">
-
+<form id="contact-form" action="https://formspree.io/f/mblgebeb" method="POST" onsubmit="handleStart(event)">
       <label for="name">Ім’я</label>
       <input type="text" id="name" name="name" required>
       <label for="email">Email</label>
