--- a/index.html
+++ b/index.html
@@ -159,10 +159,12 @@ label, input {
       <label for="email">Email</label>
       <input type="email" id="email" name="email" required>
       <label for="phone">Телефон</label>
-      <input type="text" id="phone" name="phone" required>
-  const phoneInput = document.getElementById('phone');
-phoneInput.addEventListener('input', function () {
-  this.value = this.value.replace(/\D/g, '').slice(0, 9);
+<div style="display: flex;">
+  <span style="padding: 10px; background: #eee; border: 1px solid #ccc; border-radius: 8px 0 0 8px;">+380</span>
+  <input type="tel" id="phone" name="phone" maxlength="9" pattern="[0-9]{9}" required
+         style="flex: 1; padding: 10px; border: 1px solid #ccc; border-left: none; border-radius: 0 8px 8px 0;">
+</div>
+<small style="color:#444;">Без +380, тільки 9 цифр (наприклад, 501234567)</small>
 });
       <button type="submit">▶️ Почати</button>
     </form>
@@ -247,6 +249,10 @@ phoneInput.addEventListener('input', function () {
         `;
       }
     }
+    const phoneInput = document.getElementById('phone');
+phoneInput.addEventListener('input', function () {
+  this.value = this.value.replace(/\D/g, '').slice(0, 9);
+});
   </script>
 </body>
 </html>
