--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ label, input {
         <button type="submit">▶️ Почати </button>
       </form>
     </div>
-  </div> <!-- ❗Закрили intro тут -->
+  </div> 
 
   <div id="quiz">
     <div class="question active" data-answer="A">
@@ -175,7 +175,6 @@ label, input {
       <button onclick="checkAnswer('C')">У жодному</button>
     </div>
 
-    <!-- інші питання -->
     <div class="result" id="result"></div>
   </div>
     <div class="question" data-answer="B">
