--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ label, input {
     <h2>🚦 Перевір свої знання з ПДР</h2>
 
     <div id="form-container">
-      <form id="contact-form" action="https://formspree.io/f/mblgebeb" method="POST" onsubmit="handleStart(event)">
+      <form id="contact-form" action="https://formspree.io/f/mvgavpqp" method="POST" onsubmit="handleStart(event)">
         <label for="name">Ім’я</label>
         <input type="text" id="name" name="name" required>
         <label for="email">Email</label>
